<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="io.github.rosariopfernandes.thirtysecs.AboutActivity"
    tools:showIn="@layout/activity_about">

    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="56dp"
        android:paddingBottom="56dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            app:cardCornerRadius="@dimen/cardview_default_radius"
            app:cardElevation="@dimen/cardview_default_elevation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    app:srcCompat="@drawable/about"
                    android:layout_marginTop="24dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />

            <TextView
                android:layout_marginTop="16dp"
                android:text="@string/app_name"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/version_name"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

                <TextView
                    android:text="Developed By"
                    android:layout_marginTop="24dp"
                    android:textAlignment="center"
                    android:textColor="@android:color/darker_gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="Rosário Pereira Fernandes"
                    android:textSize="18sp"
                    android:layout_marginBottom="8dp"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="Word List By"
                    android:textAlignment="center"
                    android:textColor="@android:color/darker_gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="Danilo Fonseca"
                    android:textSize="18sp"
                    android:layout_marginBottom="16dp"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btnChangeLog"
            android:text="@string/button_changelog"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="bottom"
            android:enabled="false"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            style="@style/Widget.AppCompat.Button.Colored" />

        <Button
            android:id="@+id/btnLicense"
            android:text="@string/button_licenses"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="bottom"
            android:enabled="false"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            style="@style/Widget.AppCompat.Button.Colored" />

        <Button
            android:id="@+id/btnContribute"
            android:text="@string/button_contribute"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="bottom"
            android:enabled="false"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            style="@style/Widget.AppCompat.Button.Colored" />

        <Button
            android:id="@+id/btnReport"
            android:text="@string/button_report"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="bottom"
            android:enabled="false"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            style="@style/Widget.AppCompat.Button.Colored" />

    </LinearLayout>

</ScrollView>
