<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1.0"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="io.github.rosariopfernandes.thirtysecs.TutorialActivity"
    tools:showIn="@layout/activity_tutorial">

    <ScrollView
        android:layout_weight="0.95"
        android:paddingTop="56dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <android.support.v7.widget.CardView
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardCornerRadius="@dimen/cardview_default_radius"
            app:cardElevation="@dimen/cardview_default_elevation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                android:text="@string/title_activity_tutorial"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtDescription"
                android:text="@string/game_rules"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
        
    </ScrollView>

    <Button
        android:id="@+id/btnPlay"
        android:text="@string/loading"
        android:enabled="false"
        android:layout_weight="0.05"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        style="@style/Widget.AppCompat.Button.Colored" />

</LinearLayout>
